# robocomp-ursus-rockin

./: .gitignore  README.md
classes/RoCKInYAML/: test.cpp  yaml_generator.h
components/: CMakeLists.txt
components/CropFaceImageComp/: CMakeLists.txt  CropFaceImage.cdsl  DoxyFile  cropfaceimagecomp.kdevelop  cropfaceimagecompcomp.kdevelop
components/FaceRecognitionComp/: CMakeLists.txt  DoxyFile  FaceRecognition.cdsl  facerecognitioncomp.kdevelop
components/FaceRecognitionTrainComp/: CMakeLists.txt  DoxyFile  FaceRecognitionTrain.cdsl  PreprocesadoImagenes.txt  facerecognitiontraincomp.kdevelop
components/agmInnerAgent/: CMakeLists.txt  DoxyFile  README.md  agmInner.cdsl
components/armmover/: ArmMover.cdsl  CMakeLists.txt  DoxyFile  armmovercomp.kdevelop
components/baseursus/: BaseUrsus.cdsl  CMakeLists.txt  DoxyFile  baseursuscomp.kdevelop  config
components/bikComp/: bik.cdsl
components/client_Athome/: CMakeLists.txt  DoxyFile  clientRosRob.cdsl
components/comprehension/: comprehension.py  config
components/dialogAgent/: config  dialog.cdsl  dialog_tmp.cdsl  hricomp.kdevelop
components/doorbell/: CMakeLists.txt  DoxyFile  README.md  doorbell.cdsl
components/dumbtrajectoryrobot2d/: CMakeLists.txt  config  dumbtrajectoryrobot2d.cdsl
cuba2dfeatures/: CMakeLists.txt  Cuba2DFeatures.cdsl  DoxyFile
cuba2dnaturallandmarksComp/: CMakeLists.txt  Doxyfile
cuba2dnaturallandmarksComp/src/: CMakeLists.txt  cdata.h  circle.cpp  circle.h  config.h  cuba2dnaturallandmarksComp.cpp  cuba2dnaturallandmarksI.cpp  cuba2dnaturallandmarksI.h  cubaDlg.ui  curvaturalaser.cpp  definitions.h  ui_cubaDlg.h  worker.cpp  worker.h
etc/: CGR.conf  ROCKIN0_Trajectory.xml  agmInnerAgent.conf  agmInnerAgent_sim.conf  aprilLocalization.conf  aprilTecho.conf  apriltags.conf  apriltagsCOFFEE.conf  apriltagsTecho.conf  base.conf  camaraTecho.conf  domain.aggl  domain_active_perception.aggl  domain_basic.aggl  domain_basic_perception.aggl  domain_combo.aggl  domain_hierarchical.aggl  domain_hri.aggl  domain_manipulation.aggl  domain_navigation.aggl  domain_rockin.aggl  domain_rockin_specific.aggl  doorbell.conf  dunker.conf  dynamixel.conf  executive.conf  executiveAUTONOMY.conf  executiveAUTONOMY_sim.conf  executiveCOFFEE.conf  executiveCOFFEE2.conf  executiveROCKIN.conf  faulhaber.conf  general.conf  graspingAgent.conf  graspingAgentCOFFEE.conf  graspingAgent_sim.conf  hriAgent.conf  hriAgentCOFFEE.conf  humanAgent.conf  humanAgent_sim.conf  (+65 more)
files/: autonomyLabModel2.xml  compile.sh  fetchSimulationModel.sh  push.sh
inversekinematicsComp/: lokiArm.cdsl
laserprofilextractor/: CMakeLists.txt  DoxyFile  LaserProfileExtractor.cdsl
trajectoryrobot2d/: CMakeCache.txt  DoxyFile  TrajectoryRobot2D.cdsl
trajectoryrobot2d/src/: CMakeLists.txt  CMakeListsSpecific.txt  controller.cpp  controller.h  currenttarget.cpp  currenttarget.h  elasticband.cpp  elasticband.h  forcefield.cpp  genericworker.cpp  genericworker.h  guiDlg.ui  localizer.cpp  localizer.h  planner.cpp  planner.h  plannerompl.cpp  plannerompl.h  plannerprm.cpp  plannerprm.h  pointstoroad.cpp  pointstoroad.h  qline2d.cpp  qline2d.h  rcisdraw.cpp  rcisdraw.h  sampler.cpp  sampler.h  specificmonitor.cpp  specificworker.cpp  specificworker.cpp.caca  specificworker.h  trajectory.cpp  trajectory.h  trajectoryrobot2dI.cpp  trajectoryrobot2dI.h  trajectoryrobot2dcomp.cpp  waypoints.cpp  waypoints.h
trajectorytester/: CMakeLists.txt  DoxyFile  TrajectoryTester.cdsl
(+759 files in other folders)
